welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: not found: value posBiscuit
   prendBiscuit();recule();recule();recule();recule();recule();posBiscuit();
                                                               ^