welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur) {
	avance()
	if (estSurBiscuit()) {
   prendBiscuit();recule();recule();recule();recule();recule();posBiscuit();
} 

}
gauche();avance();gauche();avance()
